--- a/docs/通识/通识.md
+++ b/docs/通识/通识.md
@@ -1,6 +1,8 @@
 # 通识
 
 - [通识](#通识)
+  - [软件](#软件)
+    - [LocalSend](#localsend)
   - [Programming](#programming)
     - [行尾序列](#行尾序列)
   - [配置文件](#配置文件)
@@ -34,6 +36,52 @@
     - [DeepSeek](#deepseek)
   - [浏览器扩展](#浏览器扩展)
     - [JSON Formatter](#json-formatter)
+
+---
+
+## 软件
+
+### LocalSend
+
+> [LocalSend - 下载](https://localsend.org/zh-CN/download)
+
+:::tabs
+
+@active:Linux
+
+官网提供的方法是通过终端安装, 具体如下, 不过由于网络环境问题还是建议下载 DEB,AppImage安装
+
+**Flathub:**
+
+```
+> flatpak install flathub org.localsend.localsend_app> flatpak run org.localsend.localsend_app
+```
+
+**Nix:**
+
+```
+> nix-shell -p localsend> pkgs.localsend # Config
+```
+
+**Snap:**
+
+```
+> sudo snap install localsend
+```
+
+**AUR:**
+
+```
+> yay -S localsend-bin
+```
+
+
+
+:::
+
+
+
+
 
 ---
 
