📝 网络钓鱼目录结构调整,新增信息梳理

--- a/docs/网络安全/钓鱼/钓鱼附件/可执行程序/捆绑程序/自解压捆绑程序.md
+++ b/docs/网络安全/钓鱼/钓鱼附件/可执行程序/捆绑程序/自解压捆绑程序.md
@@ -1,10 +1,14 @@
-# 利用Winrar捆绑恶意程序与合法程序
+# 利用Winrar创建SFX(自解压)打包捆绑恶意程序与合法程序
 
 > [X 上的 Binni Shah：“Embed A Malicious Executable in a Normal PDF or EXE : https://t.co/Uko8EQhzFj https://t.co/512NXzey0d” / X (twitter.com)](https://twitter.com/binitamshah/status/1784612260624932990)
 >
 > [在普通 PDF 或 EXE 中嵌入恶意可执行文件 |作者：萨姆·罗斯利斯伯格 |中等的 --- Embed A Malicious Executable in a Normal PDF or EXE | by Sam Rothlisberger | Medium](https://medium.com/@sam.rothlisberger/embed-a-malicious-executable-in-a-normal-pdf-or-exe-81ee5339707e)
 >
 > [WinRAR 归档程序，处理 RAR 和 ZIP 文件的强大工具 --- WinRAR archiver, a powerful tool to process RAR and ZIP files (rarlab.com)](https://www.rarlab.com/download.htm?source=post_page-----81ee5339707e--------------------------------)
+>
+> ----
+>
+> [自解压捆绑文件钓鱼 - the苍穹 - 博客园 (cnblogs.com)](https://www.cnblogs.com/thespace/p/15520945.html)
 
 可以在 [WinRAR archiver, a powerful tool to process RAR and ZIP files (rarlab.com)](https://www.rarlab.com/download.htm?source=post_page-----81ee5339707e--------------------------------) 下载 WinRAR, 使用 Winrar 将恶意软件和合法软件捆绑起来, 通过合法软件调用恶意软件在一定程度上可以绕过EDR
 
@@ -57,4 +61,14 @@
 ![image-20240429153043430](http://cdn.ayusummer233.top/DailyNotes/image-20240429153043430.png)
 
 ---
+
+## 相关链接
+
+- [钓鱼姿势汇总 - 简书 (jianshu.com)](https://www.jianshu.com/p/dcd250593698)
+- [常见钓鱼招式 - 先知社区 (aliyun.com)](https://xz.aliyun.com/t/10339?time__1311=Cqjx2QD%3DiteWqGNDQimOgbtDtt0QtDReOYD)
+- [红队攻防系列之花式鱼竿钓鱼篇 - 先知社区 (aliyun.com)](https://xz.aliyun.com/t/7958?time__1311=n4%2BxnD0DyDu7%3D0KDtD%2FiW%2B%2BDRxWwET%2B2qiKYQx&u_atoken=b3f182c7de2346300545cf550b675aaa&u_asession=01aVloK8zdyz1jbLMCfi3Rb_nJ-DNhv22v_SsASnWdWOhSTG5nkI4iMtai7iaLZyHuJB-YY_UqRErInTL5mMzm-GyPlBJUEqctiaTooWaXr7I&u_asig=05gKuE463GuJgxD-1Hv2Y2uZaxRpUSO3DG9gh-nfltKMhcVUJcYDIKhn1cPVoXgiX5Df3xrlAPX8bST2J8VKtKoNwjn6RJZ9QRez5qff0CPQnpkgY-U-QL2U-ethMX_CJYuNKBFuPaIRLct_EkBTqITpoHnpM5IKnnIeTDjpFaYXXBzhvSc0Kr8URjOX9Xe4tkzFbVi2r-pBzp0QGXRl_7EMxyjhjxVMvGJkctdPlLhh8n4lDAq4p9hSzpFkmzwmT0xUBlYPVbTlxERd8HS2DtjMomX-SUxGBermG0wjWT8qJ6gx6UxFgdF3ARCQ86jS_u_XR5hatHQVh06VuUZ-D1wA&u_aref=N2juT3KkWH9z0pLtcs9KFrZ%2FzQw%3D)
+
+---
+
+
 
