--- a/docs/Language/Go/Go语言圣经/CH11-测试.md
+++ b/docs/Language/Go/Go语言圣经/CH11-测试.md
@@ -1,5 +1,27 @@
 # CH11.测试
 
+---
+
+- [CH11.测试](#ch11测试)
+  - [CH11.1.go test](#ch111go-test)
+  - [CH11.2.测试函数](#ch112测试函数)
+    - [EX11.1.为4.3节中的charcount程序编写测试。](#ex111为43节中的charcount程序编写测试)
+    - [CH11.2.1.随机测试](#ch1121随机测试)
+      - [EX11.4.修改randomPalindrome函数](#ex114修改randompalindrome函数)
+    - [CH11.2.2.测试一个命令](#ch1122测试一个命令)
+    - [CH11.2.3.白盒测试](#ch1123白盒测试)
+    - [CH11.2.4.外部测试包](#ch1124外部测试包)
+    - [CH11.2.5.编写有效的测试](#ch1125编写有效的测试)
+      - [EX11.5.用表格驱动的技术扩展TestSplit测试](#ex115用表格驱动的技术扩展testsplit测试)
+    - [CH11.2.6.避免脆弱的测试](#ch1126避免脆弱的测试)
+  - [CH11.3.测试覆盖率](#ch113测试覆盖率)
+  - [CH11.4.基准测试](#ch114基准测试)
+    - [EX11.6.为PopCount函数编写基准测试](#ex116为popcount函数编写基准测试)
+  - [CH11.5.剖析](#ch115剖析)
+  - [CH11.6.示例函数](#ch116示例函数)
+
+---
+
 > PS: 这章内容读起来也比较丝滑,挺不错的
 
 > [测试 - Go语言圣经 (golang-china.github.io)](https://golang-china.github.io/gopl-zh/ch11/ch11.html)
@@ -472,7 +494,7 @@ func randomPalindrome(rng *rand.Rand) string {
 	for i := 0; i < (n+1)/2; i++ {
 		r := charset[rng.Intn(len(charset))]
 		runes[i] = r
-		runes[n-1-i] = r
+		runes[n-1-i] = r 
 	}
 
 	return string(runes)
@@ -498,43 +520,421 @@ func TestRandomPalindromes(t *testing.T) {
 
 ---
 
-### CH11.2.2.再测试一个命令
+### CH11.2.2.测试一个命令
 
 对于测试包`go test`是一个有用的工具，但是稍加努力我们也可以用它来测试可执行程序。如果一个包的名字是 main，那么在构建时会生成一个可执行程序，不过main包可以作为一个包被测试器代码导入。
 
+让我们为2.3.2节的echo程序编写一个测试。我们先将程序拆分为两个函数：echo函数完成真正的工作，main函数用于处理命令行输入参数和echo可能返回的错误。
 
+`ch11/echo`
 
+```go
+// Echo prints its command-line arguments.
+package main
 
+import (
+    "flag"
+    "fmt"
+    "io"
+    "os"
+    "strings"
+)
 
+var (
+    n = flag.Bool("n", false, "omit trailing newline")
+    s = flag.String("s", " ", "separator")
+)
 
+var out io.Writer = os.Stdout // modified during testing
 
+func main() {
+    flag.Parse()
+    if err := echo(!*n, *s, flag.Args()); err != nil {
+        fmt.Fprintf(os.Stderr, "echo: %v\n", err)
+        os.Exit(1)
+    }
+}
 
+func echo(newline bool, sep string, args []string) error {
+    fmt.Fprint(out, strings.Join(args, sep))
+    if newline {
+        fmt.Fprintln(out)
+    }
+    return nil
+}
 
+```
 
+在测试中我们可以用各种参数和标志调用echo函数，然后检测它的输出是否正确
 
+我们通过增加参数来减少echo函数对全局变量的依赖。
 
+我们还增加了一个全局名为out的变量来替代直接使用os.Stdout，这样测试代码可以根据需要将out修改为不同的对象以便于检查。
 
+下面就是 `echo_test.go` 文件中的测试代码：
 
+```go
+package main
 
+import (
+    "bytes"
+    "fmt"
+    "testing"
+)
 
+func TestEcho(t *testing.T) {
+    var tests = []struct {
+        newline bool
+        sep     string
+        args    []string
+        want    string
+    }{
+        {true, "", []string{}, "\n"},
+        {false, "", []string{}, ""},
+        {true, "\t", []string{"one", "two", "three"}, "one\ttwo\tthree\n"},
+        {true, ",", []string{"a", "b", "c"}, "a,b,c\n"},
+        {false, ":", []string{"1", "2", "3"}, "1:2:3"},
+    }
+    for _, test := range tests {
+        descr := fmt.Sprintf("echo(%v, %q, %q)",
+            test.newline, test.sep, test.args)
+
+        out = new(bytes.Buffer) // captured output
+        if err := echo(test.newline, test.sep, test.args); err != nil {
+            t.Errorf("%s failed: %v", descr, err)
+            continue
+        }
+        got := out.(*bytes.Buffer).String()
+        if got != test.want {
+            t.Errorf("%s = %q, want %q", descr, got, test.want)
+        }
+    }
+}
+
+```
+
+![image-20240716112957811](http://cdn.ayusummer233.top/DailyNotes/202407161130143.png)
+
+---
+
+要注意的是测试代码和产品代码在同一个包。虽然是main包，也有对应的main入口函数，但是在测试的时候main包只是TestEcho测试函数导入的一个普通包，里面main函数并没有被导出，而是被忽略的。
+
+通过将测试放到表格中，我们很容易添加新的测试用例。让我通过增加下面的测试用例来看看失败的情况是怎么样的：
+
+```go
+{true, ",", []string{"a", "b", "c"}, "a b c\n"}, // NOTE: wrong expectation!
+```
+
+![image-20240716113608264](http://cdn.ayusummer233.top/DailyNotes/202407161136465.png)
+
+错误信息描述了尝试的操作（使用Go类似语法），实际的结果和期望的结果。通过这样的错误信息，你可以在检视代码之前就很容易定位错误的原因。
+
+要注意的是在测试代码中并没有调用 `log.Fatal` 或 `os.Exit`，因为调用这类函数会导致程序提前退出；
+
+调用这些函数的特权应该放在main函数中。如果真的有意外的事情导致函数发生panic异常，测试驱动应该尝试用recover捕获异常，然后将当前测试当作失败处理。如果是可预期的错误，例如非法的用户输入、找不到文件或配置文件不当等应该通过返回一个非空的error的方式处理。幸运的是（上面的意外只是一个插曲），我们的echo示例是比较简单的也没有需要返回非空error的情况。
 
 ---
 
 ### CH11.2.3.白盒测试
 
+一种测试分类的方法是基于测试者是否需要了解被测试对象的内部工作原理。
 
+- 黑盒测试只需要测试包公开的文档和API行为，内部实现对测试代码是透明的。
+
+- 相反，白盒测试有访问包内部函数和数据结构的权限，因此可以做到一些普通客户端无法实现的测试。
+
+  例如，一个白盒测试可以在每个操作之后检测不变量的数据类型。（白盒测试只是一个传统的名称，其实称为clear box测试会更准确。）
+
+---
+
+黑盒和白盒这两种测试方法是互补的。
+
+- 黑盒测试一般更健壮，随着软件实现的完善测试代码很少需要更新。它们可以帮助测试者了解真实客户的需求，也可以帮助发现API设计的一些不足之处。
+- 相反，白盒测试则可以对内部一些棘手的实现提供更多的测试覆盖。
+
+---
+
+我们已经看到两种测试的例子
+
+- `TestIsPalindrome` 测试仅仅使用导出的 `IsPalindrome` 函数，因此这是一个黑盒测试
+- `TestEcho` 测试则调用了内部的echo函数，并且更新了内部的out包级变量，这两个都是未导出的，因此这是白盒测试
+
+---
+
+当我们准备 `TestEcho` 测试的时候，我们修改了echo函数使用包级的out变量作为输出对象，因此测试代码可以用另一个实现代替标准输出，这样可以方便对比echo输出的数据。
+
+使用类似的技术，我们可以将产品代码的其他部分也替换为一个容易测试的伪对象。使用伪对象的好处是我们可以方便配置，容易预测，更可靠，也更容易观察。同时也可以避免一些不良的副作用，例如更新生产数据库或信用卡消费行为。
+
+---
+
+下面的代码演示了为用户提供网络存储的web服务中的配额检测逻辑。当用户使用了超过90%的存储配额之后将发送提醒邮件。（译注：一般在实现业务机器监控，包括磁盘、cpu、网络等的时候，需要类似的到达阈值=>触发报警的逻辑，所以是很实用的案例。）
+
+`ch11/storage1`
+
+```go
+package storage
+
+import (
+    "fmt"
+    "log"
+    "net/smtp"
+)
+
+func bytesInUse(username string) int64 { return 0 /* ... */ }
+
+// Email sender configuration.
+// NOTE: never put passwords in source code!
+const sender = "notifications@example.com"
+const password = "correcthorsebatterystaple"
+const hostname = "smtp.example.com"
+
+const template = `Warning: you are using %d bytes of storage,
+%d%% of your quota.`
+
+func CheckQuota(username string) {
+    used := bytesInUse(username)
+    const quota = 1000000000 // 1GB
+    percent := 100 * used / quota
+    if percent < 90 {
+        return // OK
+    }
+    msg := fmt.Sprintf(template, used, percent)
+    auth := smtp.PlainAuth("", sender, password, hostname)
+    err := smtp.SendMail(hostname+":587", auth, sender,
+        []string{username}, []byte(msg))
+    if err != nil {
+        log.Printf("smtp.SendMail(%s) failed: %s", username, err)
+    }
+}
+
+```
+
+我们想测试这段代码，但是我们并不希望发送真实的邮件。因此我们将邮件处理逻辑放到一个私有的notifyUser函数中。
+
+`ch11/storage2`
+
+```go
+package storage
+
+import (
+	"fmt"
+	"log"
+	"net/smtp"
+)
+
+func bytesInUse(username string) int64 { return 0 /* ... */ }
+
+// Email sender configuration.
+// NOTE: never put passwords in source code!
+const sender = "notifications@example.com"
+const password = "correcthorsebatterystaple"
+const hostname = "smtp.example.com"
+
+const template = `Warning: you are using %d bytes of storage,
+%d%% of your quota.`
+
+var notifyUser = func(username, msg string) {
+	auth := smtp.PlainAuth("", sender, password, hostname)
+	err := smtp.SendMail(hostname+":587", auth, sender,
+		[]string{username}, []byte(msg))
+	if err != nil {
+		log.Printf("smtp.SendEmail(%s) failed: %s", username, err)
+	}
+}
+
+func CheckQuota(username string) {
+	used := bytesInUse(username)
+	const quota = 1000000000 // 1GB
+	percent := 100 * used / quota
+	if percent < 90 {
+		return // OK
+	}
+	msg := fmt.Sprintf(template, used, percent)
+	notifyUser(username, msg)
+}
+
+```
+
+现在我们可以在测试中用伪邮件发送函数替代真实的邮件发送函数。它只是简单记录要通知的用户和邮件的内容。
+
+```go
+package storage
+
+import (
+    "strings"
+    "testing"
+)
+func TestCheckQuotaNotifiesUser(t *testing.T) {
+    var notifiedUser, notifiedMsg string
+    notifyUser = func(user, msg string) {
+        notifiedUser, notifiedMsg = user, msg
+    }
+
+    // ...simulate a 980MB-used condition...
+
+    const user = "joe@example.org"
+    CheckQuota(user)
+    if notifiedUser == "" && notifiedMsg == "" {
+        t.Fatalf("notifyUser not called")
+    }
+    if notifiedUser != user {
+        t.Errorf("wrong user (%s) notified, want %s",
+            notifiedUser, user)
+    }
+    const wantSubstring = "98% of your quota"
+    if !strings.Contains(notifiedMsg, wantSubstring) {
+        t.Errorf("unexpected notification message <<%s>>, "+
+            "want substring %q", notifiedMsg, wantSubstring)
+    }
+}
+
+```
+
+这里有一个问题：当测试函数返回后，CheckQuota将不能正常工作，因为notifyUsers依然使用的是测试函数的伪发送邮件函数（当更新全局对象的时候总会有这种风险）。
+
+我们必须修改测试代码恢复 `notifyUsers` 原先的状态以便后续其他的测试没有影响，要确保所有的执行路径后都能恢复，包括测试失败或panic异常的情形。在这种情况下，我们建议使用defer语句来延后执行处理恢复的代码。
+
+```go
+func TestCheckQuotaNotifiesUser(t *testing.T) {
+    // Save and restore original notifyUser.
+    saved := notifyUser
+    defer func() { notifyUser = saved }()
+
+    // Install the test's fake notifyUser.
+    var notifiedUser, notifiedMsg string
+    notifyUser = func(user, msg string) {
+        notifiedUser, notifiedMsg = user, msg
+    }
+    // ...rest of test...
+}
+
+```
+
+这种处理模式可以用来暂时保存和恢复所有的全局变量，包括命令行标志参数、调试选项和优化参数；安装和移除导致生产代码产生一些调试信息的钩子函数；还有有些诱导生产代码进入某些重要状态的改变，比如超时、错误，甚至是一些刻意制造的并发行为等因素。
+
+以这种方式使用全局变量是安全的，因为go test命令并不会同时并发地执行多个测试。
 
 ---
 
 ### CH11.2.4.外部测试包
 
+考虑下这两个包：
 
+- `net/url` 包，提供了URL解析的功能
+- `net/http` 包，提供了web服务和HTTP客户端的功能
+
+如我们所料，上层的 `net/http` 包依赖下层的 `net/url` 包。然后，`net/url` 包中的一个测试是演示不同 URL 和 HTTP 客户端的交互行为。也就是说，一个下层包的测试代码导入了上层的包。
+
+![img](http://cdn.ayusummer233.top/DailyNotes/202407161452989.png)
+
+这样的行为在 `net/url` 包的测试代码中会导致包的循环依赖，正如图11.1中向上箭头所示，同时正如我们在10.1节所讲的，Go语言规范是禁止包的循环依赖的。
+
+不过我们可以通过外部测试包的方式解决循环依赖的问题，也就是在 `net/url` 包所在的目录声明一个独立的 `url_test` 测试包。其中包名的 `_test` 后缀告诉go test工具它应该建立一个额外的包来运行测试。我们将这个外部测试包的导入路径视作是 `net/url_test` 会更容易理解，但实际上它并不能被其他任何包导入。
+
+因为外部测试包是一个独立的包，所以能够导入那些`依赖待测代码本身`的其他辅助包；包内的测试代码就无法做到这点。在设计层面，外部测试包是在所有它依赖的包的上层，正如图11.2所示。
+
+![img](http://cdn.ayusummer233.top/DailyNotes/202407161454651.png)
+
+通过避免循环的导入依赖，外部测试包可以更灵活地编写测试，特别是集成测试（需要测试多个组件之间的交互），可以像普通应用程序那样自由地导入其他包。
+
+我们可以用go list命令查看包对应目录中哪些Go源文件是产品代码，哪些是包内测试，还有哪些是外部测试包。我们以fmt包作为一个例子：GoFiles表示产品代码对应的Go源文件列表；也就是go build命令要编译的部分。
+
+```bash
+$ go list -f={{.GoFiles}} fmt
+[doc.go format.go print.go scan.go]
+```
+
+![image-20240716145743213](http://cdn.ayusummer233.top/DailyNotes/202407161457468.png)
+
+---
+
+TestGoFiles表示的是fmt包内部测试代码，以_test.go为后缀文件名，不过只在测试时被构建：
+
+```bash
+$ go list -f={{.TestGoFiles}} fmt
+[export_test.go]
+```
+
+![image-20240716150505823](http://cdn.ayusummer233.top/DailyNotes/202407161505055.png)
+
+包的测试代码通常都在这些文件中，不过fmt包并非如此；稍后我们再解释export_test.go文件的作用。
+
+---
+
+XTestGoFiles 表示的是属于外部测试包的测试代码，也就是 `fmt_test` 包，因此它们必须先导入fmt包。同样，这些文件也只是在测试时被构建运行：
+
+```bash
+$ go list -f={{.XTestGoFiles}} fmt
+[fmt_test.go scan_test.go stringer_test.go]
+```
+
+![image-20240716150718652](http://cdn.ayusummer233.top/DailyNotes/202407161507882.png)
+
+---
+
+有时候外部测试包也需要访问被测试包内部的代码，例如在一个为了避免循环导入而被独立到外部测试包的白盒测试。在这种情况下，我们可以通过一些技巧解决：我们在包内的一个 `_test.go` 文件中导出一个内部的实现给外部测试包。因为这些代码只有在测试时才需要，因此一般会放在 `export_test.go` 文件中。
+
+例如，`fmt` 包的 `fmt.Scanf` 函数需要 `unicode.IsSpace` 函数提供的功能。但是为了避免太多的依赖，`fmt` 包并没有导入包含巨大表格数据的 `unicode` 包；相反 `fmt` 包有一个叫 `isSpace` 内部的简易实现。
+
+为了确保 `fmt.isSpace` 和 `unicode.IsSpace` 函数的行为保持一致，`fmt` 包谨慎地包含了一个测试。一个在外部测试包内的白盒测试，是无法直接访问到 `isSpace` 内部函数的，因此 `fmt` 通过一个后门导出了 `isSpace` 函数。`export_test.go` 文件就是专门用于外部测试包的后门。
+
+
+```go
+package fmt
+
+var IsSpace = isSpace
+```
+
+这个测试文件并没有定义测试代码；它只是通过 `fmt.IsSpace` 简单导出了内部的 `isSpace` 函数，提供给外部测试包使用。这个技巧可以广泛用于位于外部测试包的白盒测试。
 
 ---
 
 ### CH11.2.5.编写有效的测试
 
+许多Go语言新人会惊异于Go语言极简的测试框架。很多其它语言的测试框架都提供了识别测试函数的机制（通常使用反射或元数据），通过设置一些“setup”和“teardown”的钩子函数来执行测试用例运行的初始化和之后的清理操作，同时测试工具箱还提供了很多类似assert断言、值比较函数、格式化输出错误信息和停止一个失败的测试等辅助函数（通常使用异常机制）。虽然这些机制可以使得测试非常简洁，但是测试输出的日志却会像火星文一般难以理解。此外，虽然测试最终也会输出PASS或FAIL的报告，但是它们提供的信息格式却非常不利于代码维护者快速定位问题，因为失败信息的具体含义非常隐晦，比如“assert: 0 == 1”或成页的海量跟踪日志。
 
+Go语言的测试风格则形成鲜明对比。它期望测试者自己完成大部分的工作，定义函数避免重复，就像普通编程那样。编写测试并不是一个机械的填空过程；一个测试也有自己的接口，尽管它的维护者也是测试仅有的一个用户。一个好的测试不应该引发其他无关的错误信息，它只要清晰简洁地描述问题的症状即可，有时候可能还需要一些上下文信息。在理想情况下，维护者可以在不看代码的情况下就能根据错误信息定位错误产生的原因。一个好的测试不应该在遇到一点小错误时就立刻退出测试，它应该尝试报告更多的相关的错误信息，因为我们可能从多个失败测试的模式中发现错误产生的规律。
+
+----
+
+下面的断言函数比较两个值，然后生成一个通用的错误信息，并停止程序。它很好用也确实有效，但是当测试失败的时候，打印的错误信息却几乎是没有价值的。它并没有为快速解决问题提供一个很好的入口。
+
+```go
+import (
+    "fmt"
+    "strings"
+    "testing"
+)
+// A poor assertion function.
+func assertEqual(x, y int) {
+    if x != y {
+        panic(fmt.Sprintf("%d != %d", x, y))
+    }
+}
+func TestSplit(t *testing.T) {
+    words := strings.Split("a:b:c", ":")
+    assertEqual(len(words), 3)
+    // ...
+}
+```
+
+从这个意义上说，断言函数犯了过早抽象的错误：仅仅测试两个整数是否相同，而没能根据上下文提供更有意义的错误信息。我们可以根据具体的错误打印一个更有价值的错误信息，就像下面例子那样。只有在测试中出现重复模式时才采用抽象。
+
+```go
+func TestSplit(t *testing.T) {
+    s, sep := "a:b:c", ":"
+    words := strings.Split(s, sep)
+    if got, want := len(words), 3; got != want {
+        t.Errorf("Split(%q, %q) returned %d words, want %d",
+            s, sep, got, want)
+    }
+    // ...
+}
+```
+
+现在的测试不仅报告了调用的具体函数、它的输入和结果的意义；并且打印的真实返回的值和期望返回的值；并且即使断言失败依然会继续尝试运行更多的测试。一旦我们写了这样结构的测试，下一步自然不是用更多的if语句来扩展测试用例，我们可以用像 `IsPalindrome` 的表驱动测试那样来准备更多的s和sep测试用例。
+
+前面的例子并不需要额外的辅助函数，如果有可以使测试代码更简单的方法我们也乐意接受。（我们将在13.3节看到一个类似 `reflect.DeepEqual` 辅助函数。）一个好的测试的关键是首先实现你期望的具体行为，然后才是考虑简化测试代码、避免重复。如果直接从抽象、通用的测试库着手，很难取得良好结果。
 
 ---
 
@@ -542,25 +942,136 @@ func TestRandomPalindromes(t *testing.T) {
 
 **练习11.5:** 用表格驱动的技术扩展TestSplit测试，并打印期望的输出结果
 
+照着前面 echo 的表驱动样例来写即可
 
+```go
+package split
+
+import (
+	"strings"
+	"testing"
+)
+
+func TestSplit(t *testing.T) {
+	var tests = []struct {
+		sep  string
+		args string
+		want int
+	}{
+		{"", "", 0},
+		{"\t", "one\ttwo\tthree\n", 3},
+		{",", "a,b,c\n", 3},
+		{":", "1:2:3", 3},
+		{",", "a b c\n", 1},
+		{":", "a:b:c", 3},
+	}
+
+	for _, test := range tests {
+		words := strings.Split(test.args, test.sep)
+		if got := len(words); got != test.want {
+			t.Errorf("Split(%q,%q) returned %d words, want %d", test.args, test.sep, got, test.want)
+		}
+	}
+}
+
+```
+
+![image-20240716163145917](http://cdn.ayusummer233.top/DailyNotes/202407161631316.png)
 
 ---
 
 ### CH11.2.6.避免脆弱的测试
 
+如果一个应用程序对于新出现的但有效的输入经常失败说明程序容易出bug（不够稳健）；同样，如果一个测试仅仅对程序做了微小变化就失败则称为脆弱。就像一个不够稳健的程序会挫败它的用户一样，一个脆弱的测试同样会激怒它的维护者。最脆弱的测试代码会在程序没有任何变化的时候产生不同的结果，时好时坏，处理它们会耗费大量的时间但是并不会得到任何好处。
 
+当一个测试函数会产生一个复杂的输出如一个很长的字符串、一个精心设计的数据结构或一个文件时，人们很容易想预先写下一系列固定的用于对比的标杆数据。但是随着项目的发展，有些输出可能会发生变化，尽管很可能是一个改进的实现导致的。而且不仅仅是输出部分，函数复杂的输入部分可能也跟着变化了，因此测试使用的输入也就不再有效了。
+
+避免脆弱测试代码的方法是只检测你真正关心的属性。保持测试代码的简洁和内部结构的稳定。特别是对断言部分要有所选择。不要对字符串进行全字匹配，而是针对那些在项目的发展中是比较稳定不变的子串。很多时候值得花力气来编写一个从复杂输出中提取用于断言的必要信息的函数，虽然这可能会带来很多前期的工作，但是它可以帮助迅速及时修复因为项目演化而导致的不合逻辑的失败测试。
 
 ---
 
 ## CH11.3.测试覆盖率
 
+就其性质而言，测试不可能是完整的。计算机科学家Edsger Dijkstra曾说过：“测试能证明缺陷存在，而无法证明没有缺陷。”再多的测试也不能证明一个程序没有BUG。在最好的情况下，测试可以增强我们的信心：代码在很多重要场景下是可以正常工作的。
 
+对待测程序执行的测试的程度称为测试的覆盖率。测试覆盖率并不能量化——即使最简单的程序的动态也是难以精确测量的——但是有启发式方法来帮助我们编写有效的测试代码。
+
+这些启发式方法中，语句的覆盖率是最简单和最广泛使用的。语句的覆盖率是指在测试中至少被运行一次的代码占总代码数的比例。在本节中，我们使用`go test`命令中集成的测试覆盖率工具，来度量下面代码的测试覆盖率，帮助我们识别测试和我们期望间的差距。
+
+下面的代码是一个表格驱动的测试，用于测试第七章的表达式求值程序：
+
+`ch7/eval`
+
+```go
+func TestCoverage(t *testing.T) {
+    var tests = []struct {
+        input string
+        env   Env
+        want  string // expected error from Parse/Check or result from Eval
+    }{
+        {"x % 2", nil, "unexpected '%'"},
+        {"!true", nil, "unexpected '!'"},
+        {"log(10)", nil, `unknown function "log"`},
+        {"sqrt(1, 2)", nil, "call to sqrt has 2 args, want 1"},
+        {"sqrt(A / pi)", Env{"A": 87616, "pi": math.Pi}, "167"},
+        {"pow(x, 3) + pow(y, 3)", Env{"x": 9, "y": 10}, "1729"},
+        {"5 / 9 * (F - 32)", Env{"F": -40}, "-40"},
+    }
+
+    for _, test := range tests {
+        expr, err := Parse(test.input)
+        if err == nil {
+            err = expr.Check(map[Var]bool{})
+        }
+        if err != nil {
+            if err.Error() != test.want {
+                t.Errorf("%s: got %q, want %q", test.input, err, test.want)
+            }
+            continue
+        }
+        got := fmt.Sprintf("%.6g", expr.Eval(test.env))
+        if got != test.want {
+            t.Errorf("%s: %v => %s, want %s",
+                test.input, test.env, got, test.want)
+        }
+    }
+}
+
+```
+
+首先，我们要确保所有的测试都正常通过：
+
+```bash
+$ go test -v -run=Coverage gopl.io/ch7/eval
+=== RUN TestCoverage
+--- PASS: TestCoverage (0.00s)
+PASS
+ok      gopl.io/ch7/eval         0.011s
+
+```
+
+下面这个命令可以显示测试覆盖率工具的使用用法：
+
+```
+$ go tool cover
+Usage of 'go tool cover':
+Given a coverage profile produced by 'go test':
+    go test -coverprofile=c.out
+
+Open a web browser displaying annotated source code:
+    go tool cover -html=c.out
+...
+```
+
+`go tool`命令运行Go工具链的底层可执行程序。这些底层可执行程序放在 `$GOROOT/pkg/tool/${GOOS}_${GOARCH}` 目录。因为有`go build`命令的原因，我们很少直接调用这些底层工具。
 
 ---
 
 ## CH11.4.基准测试
 
+基准测试是测量一个程序在固定工作负载下的性能。在Go语言中，基准测试函数和普通测试函数写法类似，但是以Benchmark为前缀名，并且带有一个`*testing.B`类型的参数；`*testing.B`参数除了提供和`*testing.T`类似的方法，还有额外一些和性能测量相关的方法。它还提供了一个整数N，用于指定操作执行的循环次数。
 
+下面是IsPalindrome函数的基准测试，其中循环将执行N次。
 
 ---
 
@@ -568,11 +1079,13 @@ func TestRandomPalindromes(t *testing.T) {
 
 **练习 11.6:** 为2.6.2节的练习2.4和练习2.5的PopCount函数编写基准测试。看看基于表格算法在不同情况下对提升性能会有多大帮助。
 
-
-
 ---
 
 ## CH11.5.剖析
+
+
+
+
 
 
 
@@ -582,7 +1095,13 @@ func TestRandomPalindromes(t *testing.T) {
 
 
 
+
+
+
+
 ----
+
+
 
 
 
