📝 网络钓鱼-一些todo信息归档

--- a/docs/网络安全/钓鱼/钓鱼附件/可执行程序/捆绑程序.md
+++ b/docs/网络安全/钓鱼/钓鱼附件/可执行程序/捆绑程序.md
@@ -344,7 +344,7 @@ msf6 exploit(multi/handler) > run
 
 ---
 
-## cpp实现捆绑程序
+## cpp实现捆绑程序(TODO)
 
 > [奇安信攻防社区-关于文件捆绑的实现 (butian.net)](https://forum.butian.net/share/1778)
 >
@@ -1359,6 +1359,13 @@ CloseHandle(Thread);
 
   - `CreateRemoteThread` 在远程进程中创建线程，起始地址为 `ADDRESS`，参数为 `pRemoteParam`。
   - 使用 `CloseHandle` 关闭线程句柄。
+
+---
+
+## TODO
+
+- [捆绑程序 - Google Search](https://www.google.com/search?q=捆绑程序&sca_esv=2696dd68aa1c6147&sxsrf=ADLYWIInMXJ-IiDGkiR1tdoxmNEVOxDrTA%3A1719480856115&ei=GDJ9ZovfBqu1vr0PqsWQ6A4&ved=0ahUKEwiLy4GtvfuGAxWrmq8BHaoiBO0Q4dUDCBA&uact=5&oq=捆绑程序&gs_lp=Egxnd3Mtd2l6LXNlcnAiDOaNhue7keeoi-W6j0jtB1DZBVjcBnABeACQAQCYAWqgAdIBqgEDMC4yuAEDyAEA-AEBmAIAoAIAmAMAiAYBkgcAoAePAQ&sclient=gws-wiz-serp#ip=1)
+- 整个 Go 或者 Rust 写的捆绑程序
 
 ---
 
