--- a/docs/网络安全/钓鱼/钓鱼附件/可执行程序/文件名混淆.md
+++ b/docs/网络安全/钓鱼/钓鱼附件/可执行程序/文件名混淆.md
@@ -65,6 +65,14 @@ spoofed_file = add_rlo_suffix(original_file_path, new_extension_list)
 
 ![image-20240605145917917](http://cdn.ayusummer233.top/DailyNotes/202406051459543.png)
 
+---
+
+### RLO+形近字
+
+- [【翻译】在普通 PDF 或 EXE 中嵌入恶意可执行文件 - 先知社区 (aliyun.com)](https://xz.aliyun.com/t/14398?time__1311=mqmx9Q0QW4nmD%2FD0Dx2DUEt8DCYmIh3qqx&alichlgref=https%3A%2F%2Fwww.google.com%2F)
+
+直接 exe + RLO pdf 人容易被标记, 所以就要引入 pdf 这些字符的形近字
+
 
 ---
 
