--- a/docs/Language/Go/Go语言圣经/CH12-反射.md
+++ b/docs/Language/Go/Go语言圣经/CH12-反射.md
@@ -2,3 +2,73 @@
 
 > [反射 - Go语言圣经 (golang-china.github.io)](https://golang-china.github.io/gopl-zh/ch12/ch12.html)
 
+在Go语言中，反射（Reflection）是一种强大的工具，它允许程序在运行时检查和操作变量的类型和值。反射使得代码能够在编译时未知的情况下操作不同类型的数据。Go语言中的反射主要通过标准库中的`reflect`包来实现。
+
+反射在Go语言中非常有用，尤其是在需要编写通用库、框架或需要处理未知类型的情况下。不过，反射也带来了性能开销和代码的复杂性，因此在使用时需要谨慎。
+
+如下是一个示例, 展示了如何使用反射来获取类型和值、获取变量的基本类型、通过反射修改值，以及如何操作结构体的字段。
+
+```go
+package main
+
+import (
+    "fmt"
+    "reflect"
+)
+
+func main() {
+    // 示例1：获取类型和值
+    var x float64 = 3.4
+    fmt.Println("type:", reflect.TypeOf(x))
+    fmt.Println("value:", reflect.ValueOf(x))
+
+    // 示例2：获取Kind
+    fmt.Println("kind:", reflect.TypeOf(x).Kind())
+
+    // 示例3：通过反射修改值
+    y := 7
+    v := reflect.ValueOf(&y) // 传递指针
+    v.Elem().SetInt(42)
+    fmt.Println("new value:", y)
+
+    // 示例4：操作结构体字段
+    type T struct {
+        A int
+        B string
+    }
+    t := T{203, "hello"}
+    s := reflect.ValueOf(&t).Elem()
+    typeOfT := s.Type()
+
+    for i := 0; i < s.NumField(); i++ {
+        f := s.Field(i)
+        fmt.Printf("%d: %s %s = %v\n", i, typeOfT.Field(i).Name, f.Type(), f.Interface())
+    }
+
+    s.Field(0).SetInt(999)
+    s.Field(1).SetString("world")
+    fmt.Println("new struct:", t)
+}
+
+```
+
+一些Go语言反射中的关键概念
+
+**Type和Value**：
+
+- `reflect.Type`：表示一个Go类型，可以使用`reflect.TypeOf`函数获取。
+- `reflect.Value`：表示一个Go值，可以使用`reflect.ValueOf`函数获取。
+
+**Kind**：
+
+- `reflect.Kind`表示Go语言的基本类型，比如`int`、`float64`、`slice`、`struct`等。
+- 可以通过`reflect.Type`的`Kind`方法来获取。
+
+**修改值**：
+
+- 要使用反射修改变量的值，必须是可设置的（settable）。一般需要传递变量的指针。
+- 使用`reflect.Value`的`Set`方法来修改值。
+
+**检查和操作结构体字段和方法**：
+
+- 可以通过反射来检查结构体的字段和方法，并进行相应的操作。
